--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -30,6 +30,18 @@ spring:
     encoding: UTF-8
     mode: LEGACYHTML5
     cache: false
+#  redis 配置
+  redis:
+    database: 0
+    host: 47.102.106.253
+    port: 6379
+    timeout: 1000 # 毫秒
+    jedis:
+      pool:
+        max-active: 8 # 连接池最大数目
+        max-wait: -1 # 连接池最大阻塞等待时间
+        max-idle: 8 # 连接池最大空闲连接池
+        min-idle: 0 # 连接池最小空闲连接
 
 # mybatis 配置
 mybatis:
@@ -42,5 +54,8 @@ mybatis:
     use-column-label: true
     # 开启驼峰命名转换，如：Table(create_time) -> Entity(createTime)。不需要我们关心怎么进行字段匹配，mybatis会自动识别`大写字母与下划线`
     map-underscore-to-camel-case: true
+
+
+
 
 
